--- a/assets/scss/home_1/_contact.scss
+++ b/assets/scss/home_1/_contact.scss
@@ -1,5 +1,6 @@
 .vt-contact-section {
 	z-index: 1;
+	overflow: hidden;
 	background-color: #E7E7E7;
 	.contact-img {
 		bottom: 0;
@@ -25,9 +26,13 @@
 	@media #{$md,$sm,$xs} {  
 		margin: 0 auto;
 		text-align: center;
+		max-width: 100%;
 	}
 	.vt-section-title {
 		max-width: 490px;
+		@media #{$md,$sm,$xs} {
+			max-width: 100%; 
+		}
 		.section_title {
 			font-size: 64px;
 			@media #{$sm,$xs} {
@@ -118,6 +123,9 @@
 	max-width: 592px;
 	padding: 64px 48px;
 	background-color: #F6F6F6;
+	@media #{$md,$sm,$xs} {
+		padding: 40px 25px;
+	}
 	@media #{$md,$sm,$xs} {
 		max-width: 100%;
 	}
