--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -735,6 +735,52 @@ select:visited {
   padding-top: 25px;
 }
 
+@-webkit-keyframes pxl_blinds_staggered {
+  0%, 25% {
+    background-position: 0 100%;
+  }
+  75%, 100% {
+    background-position: 0 0;
+  }
+}
+
+@keyframes pxl_blinds_staggered {
+  0%, 25% {
+    background-position: 0 100%;
+  }
+  75%, 100% {
+    background-position: 0 0;
+  }
+}
+.vt-vertical-shape {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  position: absolute;
+}
+.vt-vertical-shape:before {
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+}
+.vt-vertical-shape.active:before {
+  background: repeating-linear-gradient(#868686, #fff 6.25%), -webkit-gradient(linear, left top, left bottom, color-stop(33.3%, #000), color-stop(0, grey), color-stop(66.7%, #fff)) 0/100% 305%;
+  background: repeating-linear-gradient(#868686, #fff 6.25%), linear-gradient(#000 33.3%, grey 0, #fff 66.7%) 0/100% 305%;
+  background-blend-mode: multiply;
+  background-position: 0 0;
+  -webkit-filter: contrast(999);
+  filter: contrast(999);
+  mix-blend-mode: screen;
+  -webkit-animation: pxl_blinds_staggered 1.5s linear alternate;
+  animation: pxl_blinds_staggered 1.5s linear alternate;
+}
+
 .mt-5 {
   margin-top: 5px;
 }
@@ -3032,6 +3078,7 @@ select:visited {
 /*Blog Section*/
 /*----------------------------------------------------*/
 .vt-blog-section {
+  overflow: hidden;
   background-color: #E7E7E7;
 }
 
@@ -3166,6 +3213,7 @@ select:visited {
 /*----------------------------------------------------*/
 .vt-contact-section {
   z-index: 1;
+  overflow: hidden;
   background-color: #E7E7E7;
 }
 .vt-contact-section .contact-img {
@@ -3202,10 +3250,16 @@ select:visited {
   .vt-contact-text-wrap {
     margin: 0 auto;
     text-align: center;
+    max-width: 100%;
   }
 }
 .vt-contact-text-wrap .vt-section-title {
   max-width: 490px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-contact-text-wrap .vt-section-title {
+    max-width: 100%;
+  }
 }
 .vt-contact-text-wrap .vt-section-title .section_title {
   font-size: 64px;
@@ -3308,6 +3362,11 @@ select:visited {
 }
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
   .vt-contact-form {
+    padding: 40px 25px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-contact-form {
     max-width: 100%;
   }
 }
@@ -3400,8 +3459,38 @@ select:visited {
 /*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
+.vt-footer-section {
+  overflow: hidden;
+}
+.vt-footer-section .vt-footer-shape {
+  right: -50px;
+  bottom: -50px;
+}
+
+.vt-footer-content .vt-scrollup {
+  right: 0;
+  bottom: 55px;
+}
+
 .vt-footer-widget-area {
   gap: 30px 80px;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-footer-widget-area {
+    gap: 30px 70px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (max-width: 480px) {
+  .vt-footer-widget-area {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
 }
 
 .vt-footer-widget .widget-title {
@@ -3413,6 +3502,11 @@ select:visited {
 }
 .vt-footer-widget .logo-widget {
   margin-right: 60px;
+}
+@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-footer-widget .logo-widget {
+    margin-right: 0;
+  }
 }
 .vt-footer-widget .logo-widget a {
   width: 100%;
@@ -3442,6 +3536,13 @@ select:visited {
 }
 .vt-footer-widget .menu-widget ul li a:hover:before {
   width: 100%;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-footer-widget .cta-widget .cta-info {
+    gap: 15px 0px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 .vt-footer-widget .cta-widget .cta-info .info-icon {
   width: 32px;
@@ -3495,15 +3596,34 @@ select:visited {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-footer-copyright {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 .vt-footer-copyright .vt-copyright-text {
   font-size: 16px;
 }
 .vt-footer-copyright .vt-copyright-text a {
   font-family: var(--vt-heading);
 }
+@media (max-width: 480px) {
+  .vt-footer-copyright .vt-copyright-menu {
+    text-align: center;
+  }
+}
 .vt-footer-copyright .vt-copyright-menu li {
   margin-left: 40px;
   color: var(--vt-title-color);
+}
+@media (max-width: 480px) {
+  .vt-footer-copyright .vt-copyright-menu li {
+    margin: 0px 10px;
+  }
 }
 .vt-footer-copyright .vt-copyright-menu li a {
   font-size: 16px;
