--- a/assets/scss/home_1/_contact.scss
+++ b/assets/scss/home_1/_contact.scss
@@ -8,6 +8,12 @@
 		z-index: -1;
 		left: 110px;
 	}
+	.vt-vertical-shape-2 {
+		bottom: 5px;
+		span {
+			background-color: #fff;
+		}
+	}
 }
 .vt-contact-content {
 	gap: 40px 75px;
