--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2564,6 +2564,12 @@ select:visited {
 .vt-service-section-3 {
   background-color: var(--vt-gray);
 }
+.vt-service-section-3 .vt-vertical-shape-2 {
+  bottom: 5px;
+}
+.vt-service-section-3 .vt-vertical-shape-2 span {
+  background-color: #fff;
+}
 
 .vt-service-content {
   z-index: 1;
@@ -2584,6 +2590,31 @@ select:visited {
   height: 100%;
   max-width: 720px;
   max-height: 920px;
+}
+.vt-service-content .vt-service-bg .vt-vertical-shape-2 {
+  left: 5px;
+  bottom: 0px;
+  width: 40px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.vt-service-content .vt-service-bg .vt-vertical-shape-2 span {
+  width: 6px;
+  height: 100%;
+  margin-bottom: 0;
+  margin-right: 6px;
+  background-color: #fff;
+}
+.vt-service-content .vt-service-bg .vt-vertical-shape-2 span:nth-child(2) {
+  width: 6px;
+  height: 100%;
+  margin-right: 10px;
+}
+.vt-service-content .vt-service-bg .vt-vertical-shape-2 span:nth-child(3) {
+  width: 6px;
+  height: 100%;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .vt-service-content .vt-service-bg {
@@ -3098,6 +3129,32 @@ select:visited {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.vt-why-choose-img .vt-vertical-shape-2 {
+  left: auto;
+  right: 5px;
+  bottom: 0px;
+  width: 40px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.vt-why-choose-img .vt-vertical-shape-2 span {
+  width: 6px;
+  height: 100%;
+  margin-bottom: 0;
+  margin-right: 6px;
+  background-color: #fff;
+}
+.vt-why-choose-img .vt-vertical-shape-2 span:nth-child(2) {
+  width: 6px;
+  height: 100%;
+  margin-right: 10px;
+}
+.vt-why-choose-img .vt-vertical-shape-2 span:nth-child(3) {
+  width: 6px;
+  height: 100%;
+}
 
 .vt-why-choose-text {
   max-width: 540px;
@@ -3150,6 +3207,12 @@ select:visited {
 .vt-blog-section {
   overflow: hidden;
   background-color: #E7E7E7;
+}
+.vt-blog-section .vt-vertical-shape-2 {
+  bottom: 5px;
+}
+.vt-blog-section .vt-vertical-shape-2 span {
+  background-color: #fff;
 }
 
 .vt-blog-item {
@@ -3291,6 +3354,12 @@ select:visited {
   opacity: 0.2;
   z-index: -1;
   left: 110px;
+}
+.vt-contact-section .vt-vertical-shape-2 {
+  bottom: 5px;
+}
+.vt-contact-section .vt-vertical-shape-2 span {
+  background-color: #fff;
 }
 
 .vt-contact-content {
