--- a/assets/scss/home_1/_why-choose.scss
+++ b/assets/scss/home_1/_why-choose.scss
@@ -21,6 +21,30 @@
 		height: 100%;
 		object-fit: cover;
 	}
+	.vt-vertical-shape-2 {
+		left: auto;
+		right: 5px;
+		bottom: 0px;
+		width: 40px;
+		height: 100%;
+		display: flex;
+		span {
+			width: 6px;
+			height: 100%;
+			margin-bottom: 0;
+			margin-right: 6px;
+			background-color: #fff;
+			&:nth-child(2) {
+				width: 6px;
+				height: 100%;
+				margin-right: 10px;
+			}
+			&:nth-child(3) {
+				width: 6px;
+				height: 100%;
+			}
+		}
+	}
 }
 .vt-why-choose-text {
 	max-width: 540px;
