--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -59,7 +59,15 @@
 /*----------------------------------------------------*/
 @import "home_1/get-in-touch";
 /*---------------------------------------------------- */
-
+/******* HOME PAGE 1 *******/
+/*Service Section*/
+/*----------------------------------------------------*/
+@import "home_2/service";
+/*---------------------------------------------------- */
+/*About Section*/
+/*----------------------------------------------------*/
+@import "home_2/about";
+/*---------------------------------------------------- */
 
 /*Footer Section*/
 /*----------------------------------------------------*/
