--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -855,6 +855,10 @@ select:visited {
 .vt-section-title p {
   padding-top: 25px;
 }
+.vt-section-title.ver_2 .subtitle {
+  background: transparent;
+  border: 1px solid rgb(223, 225, 229);
+}
 
 @-webkit-keyframes Shape_Animation {
   0%, 25% {
@@ -2938,6 +2942,22 @@ select:visited {
   }
 }
 
+.vt-about-counter-2 .vt-about-counter {
+  gap: 30px 72px;
+  max-width: 775px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-about-counter-2 .vt-about-counter {
+    max-width: 100%;
+  }
+}
+.vt-about-counter-2 .vt-about-counter:before {
+  display: none;
+}
+.vt-about-counter-2 .vt-about-counter .vt-counter-item {
+  margin-bottom: 0;
+}
+
 /*---------------------------------------------------- */
 /*Client Section*/
 /*----------------------------------------------------*/
@@ -3693,6 +3713,422 @@ select:visited {
   font-size: 16px;
   line-height: 1.3;
   max-width: 145px;
+}
+
+/*---------------------------------------------------- */
+/******* HOME PAGE 1 *******/
+/*Service Section*/
+/*----------------------------------------------------*/
+.vt-service-top-content .vt-section-title {
+  max-width: 590px;
+}
+
+/*---------------Service 4-----------------------*/
+.vt-service-content-4 {
+  border-bottom: 1px solid #101010;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-service-content-4 {
+    padding-bottom: 40px;
+  }
+}
+
+.vt-service-item-area {
+  gap: 32px 32px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-service-item-area {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.vt-service-item-4 {
+  max-width: 280px;
+  padding: 40px 32px;
+  margin-bottom: -1px;
+  border: 1px solid var(--vt-title-color);
+  border-bottom: 1px solid #fff;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-service-item-4 {
+    margin-top: 0;
+    padding: 30px;
+    margin: 0 auto;
+    max-width: 50%;
+    height: auto !important;
+    padding-bottom: 30px !important;
+    border: 1px solid var(--vt-title-color);
+  }
+}
+@media (max-width: 767px) {
+  .vt-service-item-4 {
+    max-width: 100%;
+  }
+}
+.vt-service-item-4:before {
+  left: 0;
+  right: 0;
+  top: 16px;
+  width: 89%;
+  content: "";
+  height: 0px;
+  margin: 0 auto;
+  position: absolute;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(201, 247, 202, 0.48)), to(rgba(201, 247, 202, 0)));
+  background: linear-gradient(180deg, rgba(201, 247, 202, 0.48) 0%, rgba(201, 247, 202, 0) 100%);
+}
+.vt-service-item-4 .ser_title {
+  font-size: 23px;
+  padding-bottom: 18px;
+}
+.vt-service-item-4 p {
+  color: #454545;
+  font-size: 16px;
+  line-height: 1.5;
+}
+.vt-service-item-4:nth-child(1) {
+  height: 244px;
+  margin-top: 40px;
+  padding-bottom: 80px;
+}
+.vt-service-item-4:nth-child(2) {
+  height: 284px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-service-item-4:nth-child(2) {
+    height: auto;
+  }
+}
+.vt-service-item-4:nth-child(3) {
+  height: 224px;
+  margin-top: 60px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-service-item-4:nth-child(3) {
+    margin-top: 0;
+  }
+}
+.vt-service-item-4:hover:before {
+  height: 110px;
+}
+
+/*---------------Service 5-----------------------*/
+.vt-service-section-5 {
+  z-index: 1;
+}
+.vt-service-section-5 .vt-service-pattern {
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 436px;
+}
+.vt-service-section-5 .vt-service-pattern img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.vt-service-section-5 .vt-section-title {
+  max-width: 494px;
+}
+.vt-service-section-5 .vt-section-title .section_title {
+  font-size: 64px;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-service-section-5 .vt-section-title .section_title {
+    font-size: 45px;
+  }
+}
+@media (max-width: 480px) {
+  .vt-service-section-5 .vt-section-title .section_title {
+    font-size: 30px;
+  }
+}
+
+.vt-service-tab-btn {
+  max-width: 925px;
+}
+.vt-service-tab-btn li {
+  width: 50%;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-service-tab-btn li {
+    width: 100%;
+  }
+}
+.vt-service-tab-btn li a {
+  position: relative;
+  display: inline-block;
+}
+.vt-service-tab-btn .nav-link {
+  padding: 0;
+  color: #5D5D5D;
+  font-size: 32px;
+  line-height: 1.31;
+  margin-left: 18px;
+  position: relative;
+  margin-bottom: 18px;
+  padding-bottom: 4px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  background-color: transparent;
+}
+@media (max-width: 480px) {
+  .vt-service-tab-btn .nav-link {
+    font-size: 20px;
+    margin-bottom: 8px;
+  }
+}
+.vt-service-tab-btn .nav-link:before {
+  top: 20px;
+  content: "";
+  width: 4px;
+  height: 3px;
+  left: -20px;
+  position: absolute;
+  border-radius: 100%;
+  background-color: #5D5D5D;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+@media (max-width: 480px) {
+  .vt-service-tab-btn .nav-link:before {
+    top: 15px;
+  }
+}
+.vt-service-tab-btn .nav-link:after {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+  width: 0%;
+  height: 4px;
+  margin: 0 auto;
+  position: absolute;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  background-color: var(--vt-title-color);
+}
+@media (max-width: 480px) {
+  .vt-service-tab-btn .nav-link:after {
+    height: 2px;
+  }
+}
+.vt-service-tab-btn .nav-link.active {
+  font-family: var(--vt-heading);
+}
+.vt-service-tab-btn .nav-link.active:before {
+  background-color: var(--vt-title-color);
+}
+.vt-service-tab-btn .nav-link.active:after {
+  width: 100%;
+}
+.vt-service-tab-btn .nav-pills .nav-link.active,
+.vt-service-tab-btn .nav-pills .show > .nav-link {
+  color: var(--vt-title-color);
+  background-color: transparent;
+}
+
+.vt-ser-img .vt-vertical-shape-2 {
+  bottom: 0px;
+  background-color: #fff;
+}
+.vt-ser-img .vt-vertical-shape-2 span {
+  background-color: #E7E7E7;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-ser-img {
+    height: 350px;
+  }
+  .vt-ser-img .item-img {
+    height: 100%;
+  }
+  .vt-ser-img .item-img img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
+/*---------------Service 6-----------------------*/
+.vt-service-section-6 {
+  background-color: #F5F5F3;
+}
+.vt-service-section-6 .vt-section-title {
+  max-width: 696px;
+}
+.vt-service-section-6 .vt-section-title .subtitle {
+  border: none;
+  background-color: #fff;
+}
+
+.vt-service-item-6 {
+  padding: 40px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  max-width: 384px;
+  background-color: #fff;
+  margin-right: 32px;
+}
+.vt-service-item-6 .item-icon {
+  margin-bottom: 25px;
+}
+.vt-service-item-6 .item-text .ser_title {
+  font-size: 23px;
+  padding-bottom: 14px;
+  color: var(--vt-title-color);
+}
+.vt-service-item-6 .item-text p {
+  color: #454545;
+  font-size: 16px;
+}
+
+/*---------------------------------------------------- */
+/*About Section*/
+/*----------------------------------------------------*/
+@-webkit-keyframes border_animation {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 0;
+  }
+  20% {
+    -webkit-transform: scale(1.05);
+    transform: scale(1.24);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1.7);
+    transform: scale(1.7);
+    opacity: 0;
+  }
+}
+@keyframes border_animation {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 0;
+  }
+  20% {
+    -webkit-transform: scale(1.05);
+    transform: scale(1.24);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1.7);
+    transform: scale(1.7);
+    opacity: 0;
+  }
+}
+.vt-about-title {
+  padding-bottom: 70px;
+}
+.vt-about-title .ab_title {
+  font-size: 64px;
+  max-width: 936px;
+  line-height: 1.06;
+  letter-spacing: -2px;
+  color: var(--vt-title-color);
+}
+@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-about-title .ab_title {
+    font-size: 45px;
+  }
+}
+@media (max-width: 480px) {
+  .vt-about-title .ab_title {
+    font-size: 30px;
+  }
+}
+
+.vt-about-top-content {
+  gap: 10px 30px;
+  padding-top: 42px;
+  border-top: 1px solid #D9D9D9;
+}
+.vt-about-top-content .vt-section-title {
+  max-width: 225px;
+}
+.vt-about-top-content .top-text {
+  font-size: 18px;
+  max-width: 470px;
+}
+
+.vt-about-video {
+  padding: 280px 0px;
+}
+@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-about-video {
+    padding: 230px 0px;
+  }
+}
+.vt-about-video .video-img {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.vt-about-video .video-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.vt-about-video .play-icon {
+  z-index: 2;
+  width: 130px;
+  height: 130px;
+  margin: 0 auto;
+  position: relative;
+  border-radius: 100%;
+}
+.vt-about-video .play-icon .video_btn_border {
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  position: absolute;
+  -webkit-animation-play-state: running;
+  animation-play-state: running;
+  border: 20px solid #fff;
+  -webkit-animation: border_animation 3.9s linear 0s infinite;
+  animation: border_animation 3.9s linear 0s infinite;
+}
+.vt-about-video .play-icon .video_btn_border.border_wrap-2 {
+  -webkit-animation-delay: 1.3s;
+  animation-delay: 1.3s;
+}
+.vt-about-video .play-icon .video_btn_border.border_wrap-3 {
+  -webkit-animation-delay: 2.6s;
+  animation-delay: 2.6s;
+}
+.vt-about-video .play-icon a {
+  z-index: 2;
+  width: 130px;
+  height: 130px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: var(--vt-title-color);
+  font-size: 16px;
+  position: relative;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 100%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #fff;
 }
 
 /*---------------------------------------------------- */
