--- a/assets/scss/home_2/_service.scss
+++ b/assets/scss/home_2/_service.scss
@@ -234,3 +234,11 @@
 		}
 	}
 }
+.vt-service-section-6 {
+	overflow: hidden;
+}
+.vt-service-content-6 {
+	display: flex;
+	margin: 0 auto;
+	max-width: 1920px;
+}
