--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -68,6 +68,10 @@
 /*----------------------------------------------------*/
 @import "home_2/about";
 /*---------------------------------------------------- */
+/*Testimonial Section*/
+/*----------------------------------------------------*/
+@import "home_2/testimonial";
+/*---------------------------------------------------- */
 
 /*Footer Section*/
 /*----------------------------------------------------*/
