--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3157,6 +3157,27 @@ select:visited {
   color: #6D6D6D;
   font-size: 15px;
 }
+.vt-testimonial-item.ver_2 {
+  padding: 0;
+  background-color: transparent;
+}
+.vt-testimonial-item.ver_2 li {
+  color: #5D5D5D;
+  font-size: 18px;
+}
+.vt-testimonial-item.ver_2 p {
+  font-size: 32px;
+  line-height: 1.31;
+  padding-top: 25px;
+  padding-bottom: 55px;
+  color: var(--vt-title-color);
+}
+@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-testimonial-item.ver_2 p {
+    font-size: 22px;
+    padding-bottom: 30px;
+  }
+}
 
 .vt-testi-pagination {
   display: -webkit-box;
@@ -4169,6 +4190,79 @@ select:visited {
   -ms-flex-pack: center;
   justify-content: center;
   background-color: #fff;
+}
+
+/*---------------------------------------------------- */
+/*Testimonial Section*/
+/*----------------------------------------------------*/
+.vt-testimonial-section-2 .vt-service-pattern {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 436px;
+}
+.vt-testimonial-section-2 .vt-service-pattern img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.vt-testimonial-section-2 .vt-section-title {
+  max-width: 420px;
+}
+
+.vt-testimonial-slider-2 {
+  padding-top: 95px;
+}
+@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 767px) {
+  .vt-testimonial-slider-2 {
+    padding-top: 40px;
+  }
+}
+
+.vt-testimonial-content-2 {
+  margin: 0 auto;
+  max-width: 800px;
+}
+
+.vt-testi-slider-nav-2 {
+  z-index: 1;
+  margin-top: 48px;
+}
+.vt-testi-slider-nav-2:before {
+  z-index: -1;
+  width: 100%;
+  height: 1px;
+  content: "";
+  position: absolute;
+  background-color: #DFE1E5;
+}
+.vt-testi-slider-nav-2 .vt-testi-prev-2,
+.vt-testi-slider-nav-2 .vt-testi-next-2 {
+  width: 40px;
+  height: 40px;
+  font-size: 16px;
+  background-color: #fff;
+  border: 1px solid #DFE1E5;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.vt-testi-slider-nav-2 .vt-testi-prev-2:hover,
+.vt-testi-slider-nav-2 .vt-testi-next-2:hover {
+  background-color: #C9F7CA;
+  border: 1px solid #C9F7CA;
+}
+.vt-testi-slider-nav-2 .vt-testi-pagination-2 {
+  height: 40px;
+  width: 102px;
+  color: #C9F7CA;
+  background-color: #fff;
+}
+.vt-testi-slider-nav-2 .vt-testi-pagination-2 .swiper-pagination-current,
+.vt-testi-slider-nav-2 .vt-testi-pagination-2 .swiper-pagination-total {
+  margin: 12px;
+  font-size: 15px;
+  color: var(--vt-title-color);
 }
 
 /*---------------------------------------------------- */
