--- a/assets/scss/home_1/_testimonial.scss
+++ b/assets/scss/home_1/_testimonial.scss
@@ -57,6 +57,25 @@
 			}
 		}
 	}
+	&.ver_2 {
+		padding: 0;
+		background-color: transparent;
+		li {
+			color: #5D5D5D;
+			font-size: 18px;
+		}
+		p {
+			font-size: 32px;
+			line-height: 1.31;
+			padding-top: 25px;
+			padding-bottom: 55px;
+			color: var(--vt-title-color);
+			@media #{$sm,$xs} {
+				font-size: 22px;
+				padding-bottom: 30px;
+			}
+		}
+	}
 }
 .vt-testi-pagination {
 	display: flex;
