--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -72,6 +72,12 @@
 /*----------------------------------------------------*/
 @import "home_2/testimonial";
 /*---------------------------------------------------- */
+/*Blog Section*/
+/*----------------------------------------------------*/
+@import "home_2/blog";
+/*---------------------------------------------------- */
+
+
 
 /*Footer Section*/
 /*----------------------------------------------------*/
