--- a/assets/scss/home_1/_contact.scss
+++ b/assets/scss/home_1/_contact.scss
@@ -8,6 +8,20 @@
 		z-index: -1;
 		left: 110px;
 	}
+	.contact-pattern {
+		left: 0;
+		bottom: 0;
+		z-index: -1;
+		opacity: 1;
+		width: 100%;
+		height: 436px;
+		transform: rotate(-180deg);
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 	.vt-vertical-shape-2 {
 		bottom: 5px;
 		span {
